[project]
name = "boosty_downloader"
version = "3.0.0"
description = "App for download boosty content"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Rowdy Beaver", email = "lowfc@mail.ru" }
]
dependencies = [
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.3",
  "flet>=0.80.2",
  "pyinstaller>=6.18.0",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.2",
]

[tool.flet]
org = "lowfc"
product = "boosty_downloader"
company = "lowfc"
copyright = "MiT License"

[tool.flet.app]
path = "src"
